# Autonomized_Takehome

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  implementation_log.md  pyproject.toml  requirements.lock.txt  thought_process.md
.github/workflows/: deploy.yml
app/: config.py  main.py  templating.py
app/api/: auth.py  oauth.py  pages.py
app/auth/: dependency.py  oidc.py
app/db/: session.py
app/db/models/: __init__.py  activity_item.py  conversation.py  message.py  message_citation.py  session.py  smoke_test.py  team_member.py
app/integrations/: github_client.py  jira_client.py
app/prompts/: chat_system_prompt.md  loader.py  tool_limit_reached.md
app/repositories/: activity_item_repo.py  conversation_repo.py  message_citation_repo.py  message_repo.py  team_member_repo.py
app/schemas/: chat.py
app/services/: chat_errors.py  chat_service.py  llm_router.py  pre_fetch.py  token_store.py
app/services/tools/: base.py  github_tool.py  jira_tool.py
app/static/css/: chat.css  theme.css
app/templates/: _ping_result.html  base.html  chat.html  index.html  login.html  oauth_connect.html
app/templates/chat/: _activity_pill.html  _cite_error.html  _message.html  _tool_status.html
blueprints/: deployment.md  implementation_log.md  thought_process.md
blueprints/handoffs/: handoff-1-token-store.md  handoff-2-client-rework.md  handoff-3-schema.md  handoff-4-openrouter-tools.md  handoff-5-chat-ui-templates.md  handoff-6-phase3-verify-and-phase5-chatservice.md  handoff-7-error-states-ui-polish-data-docs.md
blueprints/plans/: implementation-handoff.md
blueprints/plans/features/: chat.md  oauth-integration.md  openrouter-integration.md
blueprints/requirements/: features.md  rubric.md  timeline.md
blueprints/specs/: stack-and-infra.md
local-dev-data/: team_members.json
migrations/: env.py
migrations/versions/: 2026_07_19_1946-b9a5909fe684_add_smoke_test_table.py  2026_07_19_2242-650a0f64e7dc_autogenerated_changes.py  2026_07_20_0426-b29ec002714c_add_team_members_table.py  2026_07_20_0508-b5880cd4a5e8_add_conversation_message_activity_item_.py  2026_07_20_0514-21c775806b64_convert_messages_role_to_native_enum.py  2026_07_20_0647-b854487bcb15_add_jira_site_url_to_team_members.py  2026_07_20_2346-333720564f2a_add_team_members_jira_account_id.py
scripts/: purge_conversations.py  seed.py
scripts/azure/: deploy.sh  lib.sh  provision.sh  set-secret.sh  teardown.sh
tests/: conftest.py  test_auth.py  test_chat_service.py  test_citation_parser.py  test_hello_world.py  test_oauth.py  test_pre_fetch.py  test_team_members_seed.py  test_templating.py  test_tools.py
tests/integrations/: test_github_client.py  test_jira_client.py  test_llm_router.py  test_token_store.py
utils/: github_connect_check.py  github_seed_data.py  jira_connect_check.py  jira_seed_data.py
