[project]
name = "team-activity-monitor"
version = "0.1.0"
description = "Team Activity Monitor - chatbot integrating JIRA and GitHub activity"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "azure-keyvault-secrets>=4.8",
    "azure-identity>=1.17",
    # Server-side markdown rendering for history replay (resolve_citations), matching
    # the client-side marked.js rendering of the same content while it streams live -
    # the model's own output is markdown (unprompted but consistent).
    "markdown>=3.7",
    # azure-core's async pipeline transport lazily imports aiohttp at runtime and doesn't
    # declare it as a hard dependency - required for azure-identity's aio credentials to work.
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "djlint>=1.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/routes-own-the-transaction pattern relies on calling Depends()
# in argument defaults; this is the documented, idiomatic usage, not a real bugbear.
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.djlint]
profile = "jinja"
ignore = "H030,H031"
